# he-encryption-shelfi

./: README.md
BGN/: Makefile  params.txt  privateKey.txt
BGN/src/: BGN.cpp  BGN.h  PublicKey.cpp  PublicKey.h  main.cpp  utils.cpp  utils.h
FHE_CPP/: CMakeLists.txt
FHE_CPP/CryptoParams/: cryptocontext.txt  key-eval-mult.txt  key-private.txt  key-public.txt
FHE_CPP_SEAL/: CMakeLists.txt
FHE_CPP_SEAL/CryptoParams/: cryptocontext.txt  key-private.txt  key-public.txt
FHE_CPP_SEAL/include/: FHE_Helper.hpp
FHE_CPP_SEAL/src/: FHE_Helper.cpp  main.cpp
PaillierCPP/: Makefile  private_key-paillier.txt  public_key-paillier.txt
PaillierCPP/src/: PaillierUtils.cpp  PaillierUtils.h  main.cpp  utils.cpp  utils.h
Paillier_Offline_Online_CPP/: private_key-paillier.txt  public_key-paillier.txt
SEAL-Python/: sealfhe.py
SEAL_PY/: sealfhe.py  test.py
palisade_pybind/CryptoParams/: key-eval-mult.txt
palisade_pybind/SHELFI_FHE/: CMakeLists.txt
palisade_pybind/SHELFI_FHE/CryptoParams/: cryptocontext.txt  key-private.txt  key-public.txt
palisade_pybind/SHELFI_FHE/include/: PaillierUtils.h  scheme.h
palisade_pybind/SHELFI_FHE/pythonApi/: binding.cpp  ckks_example.py  paillier_example.py
palisade_pybind/SHELFI_FHE/resources/cryptoparams/: key-private.txt  key-public.txt
palisade_pybind/SHELFI_FHE/src/: .goutputstream-GAN3I1  PaillierUtils.cpp  binding.cpp  ckks.cpp  main.cpp  pailler.cpp  paillier.cpp  scheme.cpp  scheme.h  test_scheme.cpp
palisade_pybind/SHELFI_FHE/tests/: fhe_invocation.py  helper.py  paillier-test.py  test.py  test1.py  test_cases.py  test_ckks.py  test_paillier.py  test_performance.py
palisade_pybind/pythonApi/: binding.cpp
palisade_shelfi_interface/: CMakeLists.txt  cnpy.cpp  demo.cpp  utils.h
palisade_shelfi_interface/CryptoParams/: cryptocontext.txt  key-eval-mult.txt  key-private.txt  key-public.txt
palisades/: csvstream.h  pwa_bgvrns.cpp  pwa_ckks.cpp  pwa_utils.h  run.sh
palisades/cnpy/: cnpy.cpp
seal_python_lib/SHELFI_FHE/: CMakeLists.txt
seal_python_lib/SHELFI_FHE/include/: ckks.h  scheme.h
seal_python_lib/SHELFI_FHE/pythonApi/: ckks_example.py
seal_python_lib/SHELFI_FHE/resources/cryptoparams/: key-private.txt  private_key-paillier.txt  public_key-paillier.txt
seal_python_lib/SHELFI_FHE/src/: binding.cpp  ckks.cpp
